bindings/lisp/fa/thread.lisp

(in-package :faudio)
(define-foreign-type thread-type () () (:actual-type :pointer))
(define-parse-method thread () (make-instance 'thread-type))
(defclass thread () ((thread-ptr :initarg :thread-ptr)))
(defmethod translate-to-foreign (x (type thread-type)) (slot-value x 'thread-ptr))
(defmethod translate-from-foreign (x (type thread-type)) (make-instance 'thread :thread-ptr x))
(define-foreign-type thread-mutex-type () () (:actual-type :pointer))
(define-parse-method thread-mutex () (make-instance 'thread-mutex-type))
(defclass thread-mutex () ((thread-mutex-ptr :initarg :thread-mutex-ptr)))
(defmethod translate-to-foreign (x (type thread-mutex-type)) (slot-value x 'thread-mutex-ptr))
(defmethod translate-from-foreign (x (type thread-mutex-type)) (make-instance 'thread-mutex :thread-mutex-ptr x))
(defctype thread-milliseconds :int)
(defcfun (thread-create "fa_thread_create") thread (a nullary) (b ptr))
(defcfun (thread-join "fa_thread_join") :void (a thread))
(defcfun (thread-detach "fa_thread_detach") :void (a thread))
(defcfun (thread-main "fa_thread_main") thread)
(defcfun (thread-current "fa_thread_current") thread)
(defcfun (thread-sleep "fa_thread_sleep") :void (a thread-milliseconds))
(defcfun (thread-create-mutex "fa_thread_create_mutex") thread-mutex)
(defcfun (thread-destroy-mutex "fa_thread_destroy_mutex") :void (a thread-mutex))
(defcfun (thread-lock "fa_thread_lock") :boolean (a thread-mutex))
(defcfun (thread-try-lock "fa_thread_try_lock") :boolean (a thread-mutex))
(defcfun (thread-unlock "fa_thread_unlock") :boolean (a thread-mutex))

